# BA

./: .gitignore  README.md  sensor.txt  setupnotes.txt  timings.ods  timings.txt
arm/: .cproject  .project
arm/include/: AutoDiscovery.hpp  ClockSyncServer.hpp  ConfigServer.hpp  IrqInterface.hpp  IrqScheduler.hpp  helpers.hpp  ip_data_definitions.hpp  tcp_server.hpp  version.hpp  visensor
arm/include/calibration/: CalibrationStorage.hpp
arm/include/fpga/: FPGARegisters.hpp  FpgaConstants.hpp  SharedRingBuffer.hpp  UartLight.hpp  UnifiedBusInterface.hpp
arm/include/sensors/: ADIS16448.hpp  ADIS16488.hpp  CamBase.hpp  Corner.hpp  DenseMatcher.hpp  ExternalTrigger.hpp  ImuBase.hpp  LightControl.hpp  MPU9150.hpp  MT9V034.hpp  Sensor.hpp  Tau640.hpp  TimingBlock.hpp  ZynqStatus.hpp
arm/include/serial_bridge/: AsyncSerial.hpp  SerialBridge.hpp  SerialServer.hpp
arm/libraries/: boost_arm
arm/src/: AutoDiscovery.cpp  ClockSyncServer.cpp  ConfigServer.cpp  Doxyfile  IrqInterface.cpp  IrqScheduler.cpp  main.cpp  tcp_server.cpp  threadsafe-queue.h
arm/src/calibration/: CalibrationStorage.cpp
arm/src/fpga/: DevMem.cpp  FPGARegisters.cpp  SharedRingBuffer.cpp  UartLight.cpp  UnifiedBusInterface.cpp
arm/src/odometry/: core  odometry.cpp  odometry.h  utils
arm/src/sensors/: ADIS16448.cpp  ADIS16488.cpp  CamBase.cpp  Corner.cpp  DenseMatcher.cpp  ExternalTrigger.cpp  ImuBase.cpp  LightControl.cpp  MPU9150.cpp  MT9V034.cpp  Sensor.cpp  Tau640.cpp  TimingBlock.cpp  ZynqStatus.cpp
arm/src/serial_bridge/: AsyncSerial.cpp  SerialBridge.cpp  SerialServer.cpp
arm/src/work/: FileTransfer.cpp  FileTransfer.hpp
cpp/: .vimrc  .ycm_extra_conf.py  CMakeLists.txt  Makefile  Readme.md  main.cpp  traj_0.csv  traj_1.csv
cpp/core/: camera.h  camera_image.cpp  camera_image.h  camera_intrinsics.cpp  camera_intrinsics.h  camera_step.cpp  camera_step.h  image_data.cpp  image_data.h  minimization.cpp  minimization.h  minimization_streamlined.cpp  minimization_streamlined.h  scene.cpp  scene.h  transformation.cpp  transformation.h  warp.cpp  warp.h  warp_streamlined.cpp  warp_streamlined.h  weight_functions.cpp  weight_functions.h
cpp/gui/: colormap.h  live.cpp  live.h  minimization_gui.cpp  minimization_gui.h  scene.cpp  scene.h  sf_image_data.cpp  sf_image_data.h  state_tracker.cpp  state_tracker.h
cpp/input/: scene.cpp  scene.h
cpp/recording/: create_movie.sh
cpp/tests/: CMakeLists.txt  test.h  test_intensity_sampling.cpp  test_jacobians.cpp  test_warp.cpp  test_warp_projections.cpp
cpp/utils/: FakeCamSensor.cpp  FakeCamSensor.h  colormap.cpp  colormap.h  csv.h  eigen_sfml_conversions.cpp  eigen_sfml_conversions.h  live_telemetry.cpp  live_telemetry.h  matrix.cpp  matrix.h  progress.cpp  progress.h  system.h
cpp/utils/timing/: perf_cnt.cpp  perf_cnt.h  timer.cpp  timer.hpp  v7_pmu.hpp
matlab/: angle2dcm.m  apply_camera_transformation.m  color_to_intensity.m  derive_jacobi.m  diff_image.m  do_global_minimization.m  error_weighting.m  gauss_newton.m  global_parameters.m  gradient_descent.m  image_to_list.m  intensity_error.m  intensity_error_lsqnonlin.m  jacobi.txt  levenberg_marquardt.m  list_to_image.m  notes.txt  plot_error.m  plot_pointcloud.m  progress.m  project_img_to_3d.m  project_to_camera.m  project_to_space.m  quat2dcm.m  read_color_image.m  read_depth_image.m  read_intensity_image.m  reverse_camera_transformation.m  run_tests.m  run_testscripts.m  run_unittests.m  set_axis_limits.m  setup.m  test.ply  test_error.m  test_gaussnewton.m  test_image_pyramid.m  testscene.blend  warp_image.m
matlab/analytical/: definitions.m
matlab/camera/: apply_camera_transformation.m  project_img_to_3d.m  project_to_camera.m  warp_image.m
matlab/camera/jacobi/: camera_image.m  camera_projection.m  camera_transformation.m  jacobi_image.m  jacobi_projection.m  (+2 more)
matlab/core/: camera_intensity_sample.m  camera_project.m  camera_project_inverse.m  camera_transform.m  camera_warp.m
matlab/input/: Scene.m  SceneStep.m  camera_info_gui.py  camera_trajectory.csv  camera_trajectory_relative.csv  common.blend  eulerdiff.py  gammatest.blend  output_frame_pos.py  testscene.blend
matlab/minimization/: do_global_minimization.m  gauss_newton.m  gradient_descent.m  levenberg_marquardt.m
matlab/plots/: errplot_xy3_bias003.fig  errplot_xy_nobias.fig  errplot_xy_rottransverysmall_nobias.fig  errplot_xy_rottransverysmall_nobias_01.fig  errplot_xy_rottransverysmall_nobias_01_scale3.fig  errplot_xy_rottransverysmall_nobias_11.fig  errplot_xy_withbias.fig  huber_loss.fig  numerial_differentiation_where_J=-0.1.fig  numerial_differentiation_where_J=-1.9.fig  numerial_differentiation_where_J=almost zero.fig  pyramid_transl.fig  scale4_with_diff_xy.fig  test_T_Jacobian_allok.fig
matlab/plotting/: plot_difference.m  plot_error.m  plot_loss_function.m  plot_relative_trajectory.m  render_cost_surface.m
matlab/test_scripts/: run_minimization.m  run_plot_trajectory.m  run_render_cost_surface.m  run_render_cost_surface2.m  test_error.m  test_function.m  test_gaussnewton.m  test_general_minimization_with_jacobi.m  test_image_pyramid.m  test_image_warp.m  test_init.m  test_minimization_gui.m  test_simple_warping.m
matlab/unit_tests/: basic_projection_tests.m  check_gamma.m  diagonal_translation_tests.m  jacobi_tests.m  linear_translation_tests.m  rotation_and_translation_tests.m  util_reverse_transformation_tests.m  utils_tests.m
matlab/utils/: angle2dcm.m  find_errorplots.m  find_img_source_directories.m  image_to_list.m  is_in_img_range.m  list_to_image.m  normalize_euler_angles.m  normalize_trajectory.m  plot_bilinear.m  quat2dcm.m  read_camera_trajectory.m  read_color_image.m  read_depth_image.m  read_image.m  read_intensity_image.m  reverse_transformation.m  write_to_ply.m
report/: Makefile  report.tex
report/bibliography/: references.bib
report/chapters/: abstract.tex  appendix_text.tex  chapter.tex  conclusion.tex  declaration.tex  implementation.tex  introduction.tex  method.tex  motivation.tex  optimizations.tex  preface.tex  related_work.tex  results.tex  symbols.tex
(+61 files in other folders)
